--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
       "name": "Landing Page Design",
       "version": "0.1.0",
       "private": true,
+      "type": "module",
       "dependencies": {
           "@radix-ui/react-accordion": "^1.2.3",
           "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -47,13 +48,17 @@
           "tailwind-merge": "*",
           "vaul": "^1.1.2"
       },
-      "devDependencies": {
-          "@types/node": "^20.10.0",
-          "@vitejs/plugin-react-swc": "^3.10.2",
-          "vite": "6.3.5"
-      },
+    "devDependencies": {
+        "@types/node": "^20.10.0",
+        "@types/react": "^18.3.0",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react-swc": "^3.10.2",
+        "typescript": "^5.2.2",
+        "vite": "6.3.5"
+    },
       "scripts": {
           "dev": "vite",
-          "build": "vite build"
+          "build": "vite build",
+          "preview": "vite preview"
       }
   }
